# task-dyva

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  environment.yml  make_main.py  make_paper.py  make_supplement.py  pyproject.toml  train.py
examples/check_model_training/: training_script.py
examples/model_training/: example_training_script.py
examples/model_training_example/: example_training_script.py  training_script.py
examples/test_model_training/: test_training_script.py
manuscript/: exploratory_pre.py  figure2.py  figure3.py  figure4.py  figure5.py  figureS10.py  figureS2.py  figureS3.py  figureS4.py  figureS5.py  figureS6.py  figureS7.py  figureS8.py  figureS9.py  make_main.py  make_supplement.py  preprocessing.py
task_dyva/: __init__.py  experiment.py  logging.py  model_analysis.py  objectives.py  taskdataset.py  testing.py  transforms.py  utils.py  visualization.py
task_dyva/config/: model_config.yaml  neptune_config.yaml
task_dyva/models/: __init__.py  lldvae.py
tests/: conftest.py  test_ebb_flow_dataset.py  test_ebb_flow_game_data.py  test_experiment.py  test_logging.py  test_model.py  test_resampling.py
tests/test_data/user1089/: user1089.pickle
tests/test_data/user1365/: user1365.pickle
tests/test_data/user2139/: user2139.pickle
